--- a/MyApplication/app/src/main/res/layout/activity_insert_invite_code.xml
+++ b/MyApplication/app/src/main/res/layout/activity_insert_invite_code.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".InsertInviteCode">
+    tools:context=".FamilySet.InsertInviteCode">
 
     // 타이틀바
     <LinearLayout
