--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#fcbf48"
     android:orientation="vertical"
-    tools:context=".MypageActivity">
+    tools:context=".Mypage.MypageActivity">
 
     <TextView
         android:id="@+id/textView"
