--- a/MyApplication/app/src/main/res/layout/activity_familysetting.xml
+++ b/MyApplication/app/src/main/res/layout/activity_familysetting.xml
@@ -13,15 +13,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <Button
-            android:id="@+id/boardRtn"
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="LTaaaaaa"
+            android:textColor="#fcbf48"
+            android:background="#fcbf48"
             android:layout_weight="1"
-            android:background="@null"
-            android:text="&lt;"
-            android:textColor="#ffffff"
-            android:textSize="30dp" />
+            android:textSize="20dp"/>
 
         <TextView
             android:layout_width="match_parent"
