--- a/MyApplication/app/src/main/res/layout/board.xml
+++ b/MyApplication/app/src/main/res/layout/board.xml
@@ -65,31 +65,36 @@
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/board_Profile"
-                android:layout_width="48dp"
+                android:layout_width="40dp"
                 android:layout_height="48dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:src="@drawable/son" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="13dp"
-                android:layout_weight="5" />
+            <EditText
+                android:scrollHorizontally="false"
+                android:layout_marginTop="17dp"
+                android:id="@+id/edit_board_content"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:hint="텍스트를 입력하세요."
+                android:inputType="textMultiLine"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                android:textSize="19dp" />
 
         </TableRow>
 
-        <EditText
-            android:id="@+id/edit_board_content"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:hint="텍스트를 입력하세요."
-            android:inputType="text"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-            android:textSize="18dp" />
-
     </LinearLayout>
-    
+
+    <ImageView
+        android:id="@+id/board_imageView"
+        android:layout_gravity="right"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/nightsky"
+        android:layout_margin="5dp"/>
 
 
 <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
