--- a/MyApplication/app/src/main/res/layout/board.xml
+++ b/MyApplication/app/src/main/res/layout/board.xml
@@ -65,44 +65,49 @@
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/board_Profile"
-                android:layout_width="48dp"
+                android:layout_width="40dp"
                 android:layout_height="48dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:src="@drawable/son" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="13dp"
-                android:layout_weight="5" />
+            <EditText
+                android:scrollHorizontally="false"
+                android:layout_marginTop="17dp"
+                android:id="@+id/edit_board_content"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:hint="텍스트를 입력하세요."
+                android:inputType="textMultiLine"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                android:textSize="19dp" />
 
         </TableRow>
 
-        <EditText
-            android:id="@+id/edit_board_content"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:hint="텍스트를 입력하세요."
-            android:inputType="text"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-            android:textSize="18dp" />
-
     </LinearLayout>
-    
 
 
-<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-<!--        android:id="@+id/floatingActionButton2"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_gravity="right"-->
-<!--        android:layout_margin="10dp"-->
-<!--        android:layout_weight="1"-->
-<!--        android:clickable="true"-->
-<!--        app:backgroundTint="#FCBF48"-->
-<!--        app:srcCompat="@drawable/ic_baseline_arrow_circle_up_24"-->
-<!--        tools:ignore="VectorDrawableCompat" />-->
+    <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+    <!--        android:id="@+id/floatingActionButton2"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_gravity="right"-->
+    <!--        android:layout_margin="10dp"-->
+    <!--        android:layout_weight="1"-->
+    <!--        android:clickable="true"-->
+    <!--        app:backgroundTint="#FCBF48"-->
+    <!--        app:srcCompat="@drawable/ic_baseline_arrow_circle_up_24"-->
+    <!--        tools:ignore="VectorDrawableCompat" />-->
+
+    <ImageView
+        android:id="@+id/board_imageView"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_gravity="right"
+        android:layout_margin="5dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/nightsky" />
 
     <LinearLayout
         android:layout_width="match_parent"
