--- a/MyApplication/app/src/main/res/layout/notice_card.xml
+++ b/MyApplication/app/src/main/res/layout/notice_card.xml
@@ -66,8 +66,8 @@
             android:layout_height="150dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
-            android:src="@drawable/nightsky"
-            android:scaleType="centerCrop"/>
+            android:src="@drawable/familyship"
+            android:scaleType="centerInside"/>
 
         <LinearLayout
             android:layout_width="match_parent"
