--- a/MyApplication/app/src/main/res/layout/activity_search_map_content.xml
+++ b/MyApplication/app/src/main/res/layout/activity_search_map_content.xml
@@ -1,10 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_height="match_parent">
+    tools:context=".SerachMap.SearchMapContent">
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/add_place"
+        android:text="저장하기"/>
+    <RelativeLayout
+        android:id="@+id/map_view_detail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        tools:ignore="MissingConstraints">
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
