--- a/MyApplication/app/src/main/res/layout/notice_card.xml
+++ b/MyApplication/app/src/main/res/layout/notice_card.xml
@@ -67,7 +67,7 @@
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:src="@drawable/familyship"
-            android:scaleType="centerInside"/>
+            android:scaleType="centerCrop"/>
 
         <LinearLayout
             android:layout_width="match_parent"
