--- a/MyApplication/app/src/main/res/layout/notice_card.xml
+++ b/MyApplication/app/src/main/res/layout/notice_card.xml
@@ -5,13 +5,16 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/notice_card_Layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -47,10 +50,11 @@
 
             </LinearLayout>
         </LinearLayout>
+
         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
-            android:background="@color/black"/>
+            android:background="@color/black" />
 
         <TextView
             android:id="@+id/notice_board"
@@ -66,42 +70,46 @@
             android:layout_height="150dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
-            android:src="@drawable/familyship"
-            android:scaleType="centerCrop"/>
+            android:scaleType="centerCrop"
+            android:src="@drawable/familyship" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:layout_margin="10dp"
             android:orientation="horizontal">
+
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:src="@drawable/heart"/>
+                android:src="@drawable/heart" />
+
             <TextView
                 android:id="@+id/notice_heart"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="3"/>
+                android:text="3" />
+
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:src="@drawable/chat"/>
+                android:src="@drawable/chat" />
+
             <TextView
                 android:id="@+id/notice_comment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="1"/>
+                android:text="1" />
         </LinearLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/black"/>
+            android:background="@color/black" />
 
     </LinearLayout>
 </LinearLayout>
