--- a/MyApplication/app/src/main/res/layout/board.xml
+++ b/MyApplication/app/src/main/res/layout/board.xml
@@ -109,7 +109,7 @@
             android:layout_marginLeft="15dp"
             android:layout_marginBottom="5dp"
             android:layout_gravity="bottom"
-            android:layout_width="wrap_content"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:textStyle="bold"
             android:textSize="16dp"
@@ -117,12 +117,12 @@
         <ImageView
             android:layout_weight="1"
             android:id="@+id/board_imageView"
-            android:layout_gravity="right"
+            android:layout_gravity="bottom|right"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:scaleType="centerInside"
+            android:scaleType="centerCrop"
             android:layout_margin="5dp"/>
-<!--            android:src="@drawable/nightsky"-->
+
 
 
     </LinearLayout>
@@ -130,17 +130,17 @@
 
 
 
-<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-<!--        android:id="@+id/floatingActionButton2"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_gravity="right"-->
-<!--        android:layout_margin="10dp"-->
-<!--        android:layout_weight="1"-->
-<!--        android:clickable="true"-->
-<!--        app:backgroundTint="#FCBF48"-->
-<!--        app:srcCompat="@drawable/ic_baseline_arrow_circle_up_24"-->
-<!--        tools:ignore="VectorDrawableCompat" />-->
+    <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+    <!--        android:id="@+id/floatingActionButton2"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_gravity="right"-->
+    <!--        android:layout_margin="10dp"-->
+    <!--        android:layout_weight="1"-->
+    <!--        android:clickable="true"-->
+    <!--        app:backgroundTint="#FCBF48"-->
+    <!--        app:srcCompat="@drawable/ic_baseline_arrow_circle_up_24"-->
+    <!--        tools:ignore="VectorDrawableCompat" />-->
 
     <LinearLayout
         android:layout_width="match_parent"
