--- a/MyApplication/app/src/main/res/layout/activity_account.xml
+++ b/MyApplication/app/src/main/res/layout/activity_account.xml
@@ -37,6 +37,7 @@
             android:layout_weight="40">
 
             <TextView
+                style="@style/nanumTextView"
                 android:text="홍길동"
                 android:textSize="20dp"
                 android:layout_width="wrap_content"
@@ -47,6 +48,7 @@
                 android:textStyle="bold" />
 
             <TextView
+                style="@style/nanumTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
@@ -57,6 +59,7 @@
                 android:textStyle="bold" />
 
             <TextView
+                style="@style/nanumTextView"
                 android:text="마지막 입금 일시: 2021-06-10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
