--- a/MyApplication/app/src/main/res/layout/activity_insert_invite_code.xml
+++ b/MyApplication/app/src/main/res/layout/activity_insert_invite_code.xml
@@ -16,6 +16,7 @@
         android:background="#fcbf48">
 
         <TextView
+            style="@style/nanumTextView"
             android:gravity="center"
             android:text="초대코드 입력"
             android:layout_gravity="center"
@@ -45,7 +46,7 @@
         android:layout_margin="15dp"
         android:orientation="vertical">
         <ImageView
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="40dp"
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_gravity="center"
@@ -62,7 +63,8 @@
         android:orientation="vertical">
 
         <TextView
-            android:layout_marginTop="10dp"
+            style="@style/nanumTextView"
+            android:layout_marginTop="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
@@ -77,7 +79,7 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="50dp"
         android:orientation="horizontal">
 
         <TextView
@@ -86,6 +88,7 @@
             android:layout_height="wrap_content"/>
 
         <EditText
+            style="@style/nanumTextView"
             android:id="@+id/insertCode"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -95,6 +98,7 @@
             android:background="@null"
             android:hint="코드 입력"/>
         <Button
+            style="@style/nanumTextView"
             android:id="@+id/insertBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
