--- a/MyApplication/app/src/main/res/layout/arrive.xml
+++ b/MyApplication/app/src/main/res/layout/arrive.xml
@@ -29,6 +29,7 @@
 
 
         <Button
+            style="@style/nanumButton"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:gravity="center"
@@ -64,6 +65,8 @@
                 android:layout_gravity="center"
                 android:src="@drawable/location_pin" />
             <TextView
+                style="@style/nanumTextView"
+                android:textSize="18dp"
                 android:id="@+id/arrivePin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -83,6 +86,8 @@
                 android:layout_gravity="center"
                 android:src="@drawable/home" />
             <TextView
+                style="@style/nanumTextView"
+                android:textSize="18dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
@@ -101,6 +106,8 @@
                 android:layout_gravity="center"
                 android:src="@drawable/time" />
             <TextView
+                style="@style/nanumTextView"
+                android:textSize="18dp"
                 android:id="@+id/arriveTime"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
