--- a/MyApplication/app/src/main/res/layout/defaultcard_layout.xml
+++ b/MyApplication/app/src/main/res/layout/defaultcard_layout.xml
@@ -93,6 +93,7 @@
                     app:layout_constraintTop_toBottomOf="@id/middle_section_constraint">
 
                     <TextView
+                        style="@style/nanumTextView"
                         android:id="@+id/item_title_d"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
