--- a/MyApplication/app/src/main/res/layout/activity_home.xml
+++ b/MyApplication/app/src/main/res/layout/activity_home.xml
@@ -177,8 +177,13 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_margin="10dp"
-                            android:background="@drawable/solid_button_gray"
                             android:orientation="horizontal">
+                            <LinearLayout
+                                android:id="@+id/account_Layout"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical" />
+
 
                             <!--                        <LinearLayout-->
                             <!--                            android:layout_margin="5dp"-->
