--- a/MyApplication/app/src/main/res/layout/activity_account.xml
+++ b/MyApplication/app/src/main/res/layout/activity_account.xml
@@ -38,17 +38,34 @@
             android:orientation="vertical"
             android:layout_weight="40">
 
-            <TextView
-                style="@style/nanumTextView"
-                android:text="홍길동"
-                android:textSize="20dp"
-                android:id="@+id/account_name"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textTitle"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
-                android:textStyle="bold" />
+                android:orientation="horizontal">
+                <TextView
+                    style="@style/nanumTextView"
+                    android:text="홍길동"
+                    android:textSize="20dp"
+                    android:id="@+id/account_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/textTitle"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
+                    android:textStyle="bold" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:gravity="right"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:id="@+id/account_copy"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:src="@drawable/copy_black"/>
+                </LinearLayout>
+
+            </LinearLayout>
 
             <TextView
                 style="@style/nanumTextView"
@@ -74,6 +91,9 @@
                 android:layout_marginBottom="5dp"
                 android:textStyle="bold" />
 
+
         </LinearLayout>
+
     </LinearLayout>
+
 </LinearLayout>
