--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,12 @@
     android:orientation="vertical"
     tools:context=".Mypage.MypageActivity">
 
+    <ToggleButton
+        android:id="@+id/toggleButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="ToggleButton" />
+
     <Button
         style="@style/nanumButton"
         android:id="@+id/btn"
