--- a/MyApplication/app/src/main/res/layout/appwidget.xml
+++ b/MyApplication/app/src/main/res/layout/appwidget.xml
@@ -15,6 +15,18 @@
             android:layout_height="wrap_content"
             android:text="TextView" />
 
+        <RadioButton
+            android:id="@+id/radioButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="RadioButton" />
+
+        <Switch
+            android:id="@+id/switch1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Switch" />
+
         <Button
             android:id="@+id/btn"
             android:layout_width="wrap_content"
